--- a/po/wesnoth-low/en_GB.po
+++ b/po/wesnoth-low/en_GB.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
-"PO-Revision-Date: 2019-01-23 18:14+1100\n"
+"PO-Revision-Date: 2019-03-12 11:02+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -769,12 +769,17 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/02_Hostile_Mountains.cfg:479
+#, fuzzy
+#| msgid ""
+#| "Our troubles will be yours, too, whether either of us wills it or not. "
+#| "The orcs have come down from the north like a flood; if we squabble among "
+#| "ourselves they will feast on our discord."
 msgid ""
 "Our troubles will be yours, too, whether either of us will it or not. The "
 "orcs have come down from the north like a flood; if we squabble among "
 "ourselves they will feast on our discord."
 msgstr ""
-"Our troubles will be yours, too, whether either of us will it or not. The "
+"Our troubles will be yours, too, whether either of us wills it or not. The "
 "orcs have come down from the north like a flood; if we squabble among "
 "ourselves they will feast on our discord."
 
