--- a/po/wesnoth-multiplayer/en_GB.po
+++ b/po/wesnoth-multiplayer/en_GB.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-09-12 16:43+1000\n"
+"PO-Revision-Date: 2019-03-12 11:15+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [generic_multiplayer]: id=user_map
 #: data/multiplayer/_main.cfg:8
@@ -773,6 +773,24 @@ msgstr "Blum Duk"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:147
+#, fuzzy
+#| msgid ""
+#| "Blum Duk was renowned among his goblin clan for having tamed one of the "
+#| "Dire Wolves of the mountains, and he had the courage to match. His "
+#| "leadership and skills alone were what kept the area’s goblins alive "
+#| "despite human and elvish menaces. Rumor had it that his wolf had slain "
+#| "fifty men and a hundred Elves.\n"
+#| "\n"
+#| "Thus, when he heard of the awful monster that was inhabiting the area, it "
+#| "was only natural that he ride out alone to face it. All the other goblins "
+#| "expected him to slay the creature easily and drag back its carcass to "
+#| "feast on.\n"
+#| "\n"
+#| "He was in for quite a shock. As soon as he saw the Basilisk, Blum Duk "
+#| "cowered in fright. He tried to wheel his wolf around to run away, but it "
+#| "wouldn’t move. As the creature stalked towards him, he screamed his last "
+#| "words: Good Gog, dog, are yer legs made of stone?!\n"
+#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Blum Duk was renowned among his goblin clan for having tamed one of the Dire "
 "Wolves of the mountains, and he had the courage to match. His leadership and "
@@ -794,10 +812,12 @@ msgstr ""
 "skills alone were what kept the area’s goblins alive despite human and "
 "elvish menaces. Rumour had it that his wolf had slain fifty men and a "
 "hundred Elves.\n"
+"\n"
 "Thus, when he heard of the awful monster that was inhabiting the area, it "
 "was only natural that he ride out alone to face it. All the other goblins "
 "expected him to slay the creature easily and drag back its carcass to feast "
 "on.\n"
+"\n"
 "He was in for quite a shock. As soon as he saw the Basilisk, Blum Duk "
 "cowered in fright. He tried to wheel his wolf around to run away, but it "
 "wouldn’t move. As the creature stalked towards him, he screamed his last "
@@ -895,6 +915,25 @@ msgstr "Bramwythl"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:194
+#, fuzzy
+#| msgid ""
+#| "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
+#| "other Woses. More than any other Wose, he enjoyed simply standing alone "
+#| "in the sun, arms upraised, admiring the beauty of the empty sky. Once, "
+#| "even, he confided in a fellow that his greatest wish was to be able to "
+#| "bask forever in the sun’s glory.\n"
+#| "\n"
+#| "However, not long after, the local wose community heard of the approach "
+#| "of a horrible monster, powerful enough to easily destroy the few woses "
+#| "that lived in the area. They quickly moved off (quickly for Woses, "
+#| "anyway), but Bramwythl was left behind — in their haste, no one had "
+#| "remembered to find him and tell him of the danger.\n"
+#| "\n"
+#| "He was taken quite unawares by the Basilisk, and turned to stone before "
+#| "he even recognized the beast. His petrified form still stands there "
+#| "today, warmed by the sun’s rays, under an open sky. His greatest wish has "
+#| "been granted.\n"
+#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
 "other Woses. More than any other Wose, he enjoyed simply standing alone in "
@@ -913,15 +952,17 @@ msgid ""
 "(inscribed by Elvish Pillager)"
 msgstr ""
 "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
-"other Woses. More than any other Wose, he enjoyed simply standing alone in "
+"other woses. More than any other wose, he enjoyed simply standing alone in "
 "the sun, arms upraised, admiring the beauty of the empty sky. Once, even, he "
 "confided in a fellow that his greatest wish was to be able to bask for ever "
 "in the sun’s glory.\n"
+"\n"
 "However, not long after, the local wose community heard of the approach of a "
 "horrible monster, powerful enough to easily destroy the few woses that lived "
-"in the area. They quickly moved off (quickly for Woses, anyway), but "
+"in the area. They quickly moved off (quickly for woses, anyway), but "
 "Bramwythl was left behind — in their haste, no-one had remembered to find "
 "him and tell him of the danger.\n"
+"\n"
 "He was taken quite unawares by the Basilisk, and turned to stone before he "
 "even recognized the beast. His petrified form still stands there today, "
 "warmed by the sun’s rays, under an open sky. His greatest wish has been "
@@ -2677,6 +2718,12 @@ msgstr ""
 
 #~ msgid "Sides %s and %d are tied."
 #~ msgstr "Sides %s and %d are tied."
+
+#~ msgid "Turin's Monster of the Lake"
+#~ msgstr "Turin's Monster of the Lake"
+
+#~ msgid "The Spider"
+#~ msgstr "The Spider"
 
 #~ msgid "Default + Khalifate"
 #~ msgstr "Default + Khalifate"
