--- a/po/wesnoth-sota/en_GB.po
+++ b/po/wesnoth-sota/en_GB.po
@@ -3953,6 +3953,21 @@ msgstr "Epilogue"
 
 #. [part]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:16
+#, fuzzy
+#| msgid ""
+#| "10 VII, 23 YW — Final Entry\n"
+#| "\n"
+#| "We prevailed today on the field, but our victory was somewhat bitter. "
+#| "<i>Everyone</i> was afraid or angry and immediately attacked us instead "
+#| "of listening to our news. I realize now... the world is not ready for our "
+#| "knowledge. They cannot understand that we have conquered that primordial "
+#| "fear: death. Instead, as they look upon us, judgment of our appearance "
+#| "drives them to ignorant terror. I give up on all of them. For now, I "
+#| "shall just withdraw — perhaps live in the old troll city and learn the "
+#| "applications of mountain fire. In some future time, less conservative "
+#| "attitudes may dominate, and our knowledge can be put to good use. I can "
+#| "certainly afford to wait. In the meantime, we are doing what we can to "
+#| "hasten that day."
 msgid ""
 "10 VII, 23 YW — Final Entry\n"
 "\n"
@@ -3969,13 +3984,29 @@ msgstr ""
 "We prevailed today on the field, but our victory was somewhat bitter. "
 "<i>Everyone</i> was afraid or angry and immediately attacked us instead of "
 "listening to our news. I realize now... the world is not ready for our "
-"knowledge. I give up on all of them. I am going to live in the old troll "
-"city and learn the applications of mountain fire. In some future time, less "
-"conservative attitudes will dominate, and I can certainly afford to wait. In "
-"the meantime, we are doing what we can to hasten that day."
+"knowledge. They cannot understand that we have conquered that primordial "
+"fear: death. Instead, as they look upon us, judgement of our appearance "
+"drives them to ignorant terror. I give up on all of them. For now, I shall "
+"just withdraw — perhaps live in the old troll city and learn the "
+"applications of mountain fire. In some future time, less conservative "
+"attitudes may dominate, and our knowledge can be put to good use. I can "
+"certainly afford to wait. In the meantime, we are doing what we can to "
+"hasten that day."
 
 #. [then]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:31
+#, fuzzy
+#| msgid ""
+#| "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. "
+#| "Most of the others are going with him. I wish them success. Vendraxis now "
+#| "knows what he must learn to replicate our metamorphosis. He will use the "
+#| "years left to him in study and practice while he attempts to change the "
+#| "attitudes of his people. As for me, I will make my journal conspicuous on "
+#| "this battlefield. I suspect that most will fear it enough to try to "
+#| "destroy it, but I have placed several wards on my journal to protect it. "
+#| "This way, it should survive long enough to make its way into the hands of "
+#| "someone more open-minded. Tath, in particular, is home to many mages. It "
+#| "only takes one who is willing to learn the secrets of the ancients."
 msgid ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
 "of the others are going with him. I wish them success. Vendraxis now knows "
@@ -3990,13 +4021,25 @@ msgstr ""
 "of the others are going with him. I wish them success. Vendraxis now knows "
 "what he must learn to replicate our metamorphosis. He will use the years "
 "left to him in study and practice while he attempts to change the attitudes "
-"of his people. As for me, I have placed some spells on my journal to help "
-"keep it from harm, and I will make it conspicuous on this battlefield. I "
-"hope that it will eventually make its way into the hands of someone in Tath "
+"of his people. As for me, I will make my journal conspicuous on this "
+"battlefield. I suspect that most will fear it enough to try to destroy it, "
+"but I have placed several wards on my journal to protect it. This way, it "
+"should survive long enough to make its way into the hands of someone more "
+"open-minded. Tath, in particular, is home to many mages. It only takes one "
 "who is willing to learn the secrets of the ancients."
 
 #. [else]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:34
+#, fuzzy
+#| msgid ""
+#| "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. "
+#| "Most of the others are going with him. I wish them success. As for me, I "
+#| "will make my journal conspicuous on this battlefield. I suspect that most "
+#| "will fear it enough to try to destroy it, but I have placed several wards "
+#| "on my journal to protect it. This way, it should survive long enough to "
+#| "make its way into the hands of someone more open-minded. Tath, in "
+#| "particular, is home to many mages. It only takes one who is willing to "
+#| "learn the secrets of the ancients."
 msgid ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
 "of the others are going with him. I wish them success. As for me, I have "
@@ -4006,11 +4049,13 @@ msgid ""
 "the ancients."
 msgstr ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
-"of the others are going with him. I wish them success. As for me, I have "
-"placed some spells on my journal to help keep it from harm, and I will make "
-"it conspicuous on this battlefield. I hope that it will eventually make its "
-"way into the hands of someone in Tath who is willing to learn the secrets of "
-"the ancients."
+"of the others are going with him. I wish them success. As for me, I will "
+"make my journal conspicuous on this battlefield. I suspect that most will "
+"fear it enough to try to destroy it, but I have placed several wards on my "
+"journal to protect it. This way, it should survive long enough to make its "
+"way into the hands of someone more open-minded. Tath, in particular, is home "
+"to many mages. It only takes one who is willing to learn the secrets of the "
+"ancients."
 
 #. [unit_type]: id=Bone Bird, race=undead, description=
 #: data/campaigns/Secrets_of_the_Ancients/units/Bone_Bird.cfg:4
