updated British English translation

--- a/po/wesnoth-ai/en_GB.po
+++ b/po/wesnoth-ai/en_GB.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2018-07-23 17:55+1000\n"
+"PO-Revision-Date: 2019-03-12 10:59+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: \n"
 "Language: en_GB\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.9\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [ai]: id=ai_default_rca
 #: data/ai/ais/ai_default_rca.cfg:9
@@ -2771,21 +2771,6 @@ msgstr ""
 
 #. [message]: speaker=Uralt
 #: data/ai/micro_ais/scenarios/simple_attack.cfg:176
-#, fuzzy
-#| msgid ""
-#| "Hahahahaha !! I have given special instruction to my Soulless to attack "
-#| "all you almost-advanced units first. Also watch how those same Soulless "
-#| "will throw themselves mercilessly at your pitiful soldiers after that, "
-#| "saving my more valuable skeleton minions for later.  I have taken the "
-#| "term 'disposable units' to a whole new level. Watch in awe !!\n"
-#| "\n"
-#| "<i>Translation: The undead side includes two instances of the Simple "
-#| "Attack Micro AI.  The first makes the Soulless attack all units 1 XP from "
-#| "leveling up, such that they can be eliminated afterward.  The second "
-#| "executes all remaining attacks possible by Soulless (and Walking "
-#| "Corpses), without regard for their own safety.  Only after that does the "
-#| "default Wesnoth attack mechanism kick in to attack with the remaining "
-#| "units (skeletons).</i>"
 msgid ""
 "Hahahahaha!! I have given special instruction to my Soulless to attack all "
 "your almost-advanced units first. Also watch how those same Soulless will "
@@ -2801,10 +2786,10 @@ msgid ""
 "mechanism kick in to attack with the remaining units (skeletons).</i>"
 msgstr ""
 "Ha ha ha ha ha! I have given special instruction to my Soulless to attack "
-"all you almost-advanced units first. Also watch how those same Soulless will "
-"throw themselves mercilessly at your pitiful soldiers after that, saving my "
-"more valuable skeleton minions for later.  I have taken the term 'disposable "
-"units' to a whole new level. Watch in awe!\n"
+"all your almost-advanced units first. Also watch how those same Soulless "
+"will throw themselves mercilessly at your pitiful soldiers after that, "
+"saving my more valuable skeleton minions for later. I have taken the term "
+"'disposable units' to a whole new level. Watch in awe!\n"
 "\n"
 "<i>Translation: The undead side includes two instances of the Simple Attack "
 "Micro AI.  The first makes the Soulless attack all units 1 XP from advancing "
