--- a/po/wesnoth-dm/en_GB.po
+++ b/po/wesnoth-dm/en_GB.po
@@ -4132,7 +4132,7 @@ msgstr ""
 #. [message]: speaker=Ulrek
 #: data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg:241
 msgid "Ye all heard! Naught will ever say dwarves ever feared anyone. Attack!"
-msgstr "Ye all heard! Naught will ever say dwarves ever feared anyone. Attack!"
+msgstr "Ye all heard! Nought will ever say dwarves ever feared anyone. Attack!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg:266
