--- a/po/wesnoth-dw/en_GB.po
+++ b/po/wesnoth-dw/en_GB.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2018-07-14 14:41+1000\n"
+"PO-Revision-Date: 2019-03-12 11:00+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.9\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:13
@@ -375,10 +375,8 @@ msgstr "Hey, I did it!"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:626
-#, fuzzy
-#| msgid "Good work Kai, if I may say so."
 msgid "Good work, Kai, if I may say so."
-msgstr "Good work Kai, if I may say so."
+msgstr "Good work, Kai, if I may say so."
 
 #. [scenario]: id=02_Flight
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:27
@@ -946,6 +944,8 @@ msgid ""
 "I wonder why such a strangely colored wolf emerged from the forest over "
 "there."
 msgstr ""
+"I wonder why such a strangely coloured wolf emerged from the forest over "
+"there."
 
 #. [message]: speaker=unit
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:306
