--- a/po/wesnoth-aoi/en_GB.po
+++ b/po/wesnoth-aoi/en_GB.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2019-01-23 17:34+1100\n"
+"PO-Revision-Date: 2019-03-12 10:59+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -253,13 +253,6 @@ msgstr ""
 
 #. [message]: speaker=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:154
-#, fuzzy
-#| msgid ""
-#| "So the grim tales of them prove true. They must not be allowed to "
-#| "continue; we must banish this blight from our forests. I shall marshal "
-#| "the wardens and drive them off. And the Council needs to hear of this; "
-#| "take the message and return with reinforcements, there might be more of "
-#| "them."
 msgid ""
 "So the grim tales of them prove true. They must not be allowed to continue; "
 "we must banish this blight from our forests. I shall marshal the wardens and "
@@ -269,7 +262,7 @@ msgstr ""
 "So the grim tales of them prove true. They must not be allowed to continue; "
 "we must banish this blight from our forests. I shall marshal the wardens and "
 "drive them off. And the Council needs to hear of this; take the message and "
-"return with reinforcements, there might be more of them."
+"return with reinforcements, for there might be more of them."
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:159
