--- a/po/wesnoth-httt/en_GB.po
+++ b/po/wesnoth-httt/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2019-01-23 18:12+1100\n"
+"PO-Revision-Date: 2019-03-12 11:00+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -2346,15 +2346,11 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/07_Crossroads.cfg:53
-#, fuzzy
-#| msgid ""
-#| "The queen’s agents were still scouring the coastal regions, for news of "
-#| "Elensefar’s rescue had not yet reached her."
 msgid ""
 "The Queen’s agents were still scouring the coastal regions, for news of "
 "Elensefar’s rescue had not yet reached her."
 msgstr ""
-"The queen’s agents were still scouring the coastal regions, for news of "
+"The Queen’s agents were still scouring the coastal regions, for news of "
 "Elensefar’s rescue had not yet reached her."
 
 #. [part]
@@ -2758,12 +2754,6 @@ msgstr "Thank you for returning to help us, Moremirmu."
 
 #. [message]: speaker=Moremirmu
 #: data/campaigns/Heir_To_The_Throne/scenarios/09_The_Valley_of_Death.cfg:390
-#, fuzzy
-#| msgid ""
-#| "It is both my duty and pleasure, my lord! We were dining with some royal "
-#| "guards of the princess, taking a rest from our pilgrimage, when they "
-#| "spoke of how you were tricked into traveling these dangerous lands. We "
-#| "could do nothing but help you!"
 msgid ""
 "It is both my duty and pleasure, my lord! We were dining with some royal "
 "guards of the Princess, taking a rest from our pilgrimage, when they spoke "
@@ -2771,7 +2761,7 @@ msgid ""
 "nothing but help you!"
 msgstr ""
 "It is both my duty and pleasure, my lord! We were dining with some royal "
-"guards of the princess, taking a rest from our pilgrimage, when they spoke "
+"guards of the Princess, taking a rest from our pilgrimage, when they spoke "
 "of how you were tricked into travelling these dangerous lands. We could do "
 "nothing but help you!"
 
@@ -5384,15 +5374,11 @@ msgstr "Of course not, whelp, else he would have chosen a safer route."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:339
-#, fuzzy
-#| msgid ""
-#| "Hold your tongue, Kalenz. The princess is our ally and of royal blood. "
-#| "She deserves not your disrespect."
 msgid ""
 "Hold your tongue, Kalenz. The Princess is our ally and of royal blood. She "
 "deserves not your disrespect."
 msgstr ""
-"Hold your tongue, Kalenz. The princess is our ally and of royal blood. She "
+"Hold your tongue, Kalenz. The Princess is our ally and of royal blood. She "
 "deserves not your disrespect."
 
 #. [message]: speaker=Kalenz
@@ -5829,15 +5815,11 @@ msgstr "Aimucasur’s lordship over this cursed ground is broken."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:342
-#, fuzzy
-#| msgid ""
-#| "Aimucasur? So you know of this Lich-Lord? Did you know him? He was a "
-#| "powerful mage?"
 msgid ""
 "Aimucasur? So you know of this Lich-Lord? Did you know him? Was he a "
 "powerful mage?"
 msgstr ""
-"Aimucasur? So you know of this Lich-Lord? Did you know him? He was a "
+"Aimucasur? So you know of this Lich-Lord? Did you know him? Was he a "
 "powerful mage?"
 
 #. [message]: speaker=Delfador
@@ -6687,19 +6669,13 @@ msgstr "So, Konrad, do you think we can simply trot across the battlefield?"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:521
-#, fuzzy
-#| msgid ""
-#| "Stop for a moment, princess. Look — you can barely see them in the "
-#| "distance there, but the advance scouts have found each other. The Queen’s "
-#| "troops are marching full speed for the orcs’ camp, and vice-versa. These "
-#| "armies are out for blood."
 msgid ""
 "Stop for a moment, Princess. Look — you can barely see them in the distance "
 "there, but the advance scouts have found each other. The Queen’s troops are "
 "marching full speed for the orcs’ camp, and vice-versa. These armies are out "
 "for blood."
 msgstr ""
-"Stop for a moment, princess. Look — you can barely see them in the distance "
+"Stop for a moment, Princess. Look — you can barely see them in the distance "
 "there, but the advance scouts have found each other. The Queen’s troops are "
 "marching full speed for the orcs’ camp, and vice-versa. These armies are out "
 "for blood."
@@ -6715,18 +6691,13 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:529
-#, fuzzy
-#| msgid ""
-#| "(hushed) Our soldiers will defend us as we rush across the field. Sorry "
-#| "to be blunt, princess, but you and I are the only ones who need to make "
-#| "it across alive."
 msgid ""
 "(hushed) Our soldiers will defend us as we rush across the field. Sorry to "
 "be blunt, Princess, but you and I are the only ones who need to make it "
 "across alive."
 msgstr ""
 "(hushed) Our soldiers will defend us as we rush across the field. Sorry to "
-"be blunt, princess, but you and I are the only ones who need to make it "
+"be blunt, Princess, but you and I are the only ones who need to make it "
 "across alive."
 
 #. [message]: speaker=Delfador
@@ -7048,10 +7019,8 @@ msgstr ""
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:296
-#, fuzzy
-#| msgid "Then we must hurry. Stand fast! We will send reinforcements."
 msgid "Then we must hurry. Stand fast! We shall send reinforcements."
-msgstr "Then we must hurry. Stand fast! We will send reinforcements."
+msgstr "Then we must hurry. Stand fast! We shall send reinforcements."
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:303
@@ -8200,16 +8169,12 @@ msgstr "Who then is your leader? Whom do we serve?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:472
-#, fuzzy
-#| msgid ""
-#| "You will serve us. You will protect our flanks while we make way straight "
-#| "for the queen. With you on either flank, we can surely overcome her."
 msgid ""
 "You will serve us. You will protect our flanks while we make way straight "
 "for the Queen. With you on either flank, we can surely overcome her."
 msgstr ""
 "You will serve us. You will protect our flanks while we make way straight "
-"for the queen. With you on either flank, we can surely overcome her."
+"for the Queen. With you on either flank, we can surely overcome her."
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:476
@@ -8777,18 +8742,13 @@ msgstr "raging blizzard"
 #. [unit_type]: id=Fighter
 #: data/campaigns/Heir_To_The_Throne/units/Fighter.cfg:54
 #: data/campaigns/Heir_To_The_Throne/units/Fighter.cfg:60
-#, fuzzy
-#| msgid ""
-#| "Young and brash, Fighters attack with a sword, and are vulnerable to more "
-#| "seasoned enemies. However they have the potential to become great "
-#| "warriors one day."
 msgid ""
 "Young and brash, Fighters attack with a sword, and are vulnerable to more "
 "seasoned enemies. However, they have the potential to become great warriors "
 "one day."
 msgstr ""
 "Young and brash, Fighters attack with a sword, and are vulnerable to more "
-"seasoned enemies. However they have the potential to become great warriors "
+"seasoned enemies. However, they have the potential to become great warriors "
 "one day."
 
 #. [unit_type]: id=Injured Sergeant
@@ -9155,17 +9115,12 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/utils/intro.cfg:12
-#, fuzzy
-#| msgid ""
-#| "The Northern host encamped at Galcadar, by the ford of Abez, and the king "
-#| "led his forces to meet them. Splitting his army in two, he led one half "
-#| "while his son, the crown prince Eldred, led the other."
 msgid ""
 "The Northern host encamped at Galcadar, by the Ford of Abez, and the king "
 "led his forces to meet them. Splitting his army in two, he led one half "
 "while his son, the crown prince Eldred, led the other."
 msgstr ""
-"The Northern host encamped at Galcadar, by the ford of Abez, and the king "
+"The Northern host encamped at Galcadar, by the Ford of Abez, and the king "
 "led his forces to meet them. Splitting his army in two, he led one half "
 "while his son, the crown prince Eldred, led the other."
 
