--- a/po/wesnoth-l/en_GB.po
+++ b/po/wesnoth-l/en_GB.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2019-01-23 18:13+1100\n"
+"PO-Revision-Date: 2019-03-12 14:18+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -106,12 +106,6 @@ msgstr "Dallben"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:22
-#, fuzzy
-#| msgid ""
-#| "In the Era of Turmoil, during the reign of King Garard II, the border "
-#| "towns of Delwyn and Dallben in the province of Annuvin grew increasingly "
-#| "dissatisfied with the King’s rule. Being preoccupied with the great wars, "
-#| "the King was unable to send adequate forces to protect the frontier."
 msgid ""
 "In the Era of Turmoil, during the reign of King Garard II, the border towns "
 "of Delwyn and Dallben in the Province of Annuvin grew increasingly "
@@ -119,7 +113,7 @@ msgid ""
 "the King was unable to send adequate forces to protect the frontier."
 msgstr ""
 "In the Era of Turmoil, during the reign of King Garard II, the border towns "
-"of Delwyn and Dallben in the province of Annuvin grew increasingly "
+"of Delwyn and Dallben in the Province of Annuvin grew increasingly "
 "dissatisfied with the King’s rule. Being preoccupied with the great wars, "
 "the King was unable to send adequate forces to protect the frontier."
 
@@ -743,19 +737,13 @@ msgstr ""
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:188
-#, fuzzy
-#| msgid ""
-#| "You do not understand. We attacked a Wesnoth army patrol. Not only that, "
-#| "the leader was no man I had ever seen in Annuvin province before. Never "
-#| "has one been sent out here as a patrol captain who was so ruthless and "
-#| "cruel."
 msgid ""
 "You do not understand. We attacked a Wesnoth army patrol. Not only that, the "
 "leader was no man I had ever seen in Annuvin Province before. Never has one "
 "been sent out here as a patrol captain who was so ruthless and cruel."
 msgstr ""
 "You do not understand. We attacked a Wesnoth army patrol. Not only that, the "
-"leader was no man I had ever seen in Annuvin province before. Never has one "
+"leader was no man I had ever seen in Annuvin Province before. Never has one "
 "been sent out here as a patrol captain who was so ruthless and cruel."
 
 #. [message]: speaker=Harper
@@ -1002,17 +990,12 @@ msgstr ""
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:207
-#, fuzzy
-#| msgid ""
-#| "What can we do then? We have brought with us many from Annuvin province "
-#| "who are willing to fight, but our families are still at home. They will "
-#| "not last long if the Queen’s patrols return."
 msgid ""
 "What can we do then? We have brought with us many from Annuvin Province who "
 "are willing to fight, but our families are still at home. They will not last "
 "long if the Queen’s patrols return."
 msgstr ""
-"What can we do then? We have brought with us many from Annuvin province who "
+"What can we do then? We have brought with us many from Annuvin Province who "
 "are willing to fight, but our families are still at home. They will not last "
 "long if the Queen’s patrols return."
 
@@ -2174,7 +2157,7 @@ msgid ""
 "anymore."
 msgstr ""
 "Baldras, Gwydion is Lord Maddock’s son. This battle isn’t just about Annuvin "
-"anymore."
+"any more."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:542
@@ -2245,11 +2228,6 @@ msgstr "No-one inside the fortress would make it out alive."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:811
-#, fuzzy
-#| msgid ""
-#| "After more than a week of fierce fighting, the main body of Asheviere’s "
-#| "host arrived from Weldyn. The battle was soon finished. Every last man "
-#| "from the province of Annuvin was executed."
 msgid ""
 "After more than a week of fierce fighting, the main body of Asheviere’s host "
 "arrived from Weldyn. The battle was soon finished. Every last man from the "
@@ -2257,7 +2235,7 @@ msgid ""
 msgstr ""
 "After more than a week of fierce fighting, the main body of Asheviere’s host "
 "arrived from Weldyn. The battle was soon finished. Every last man from the "
-"province of Annuvin was executed."
+"Province of Annuvin was executed."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:841
