--- a/po/wesnoth-tsg/en_GB.po
+++ b/po/wesnoth-tsg/en_GB.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-01-27 23:41+1100\n"
+"PO-Revision-Date: 2019-03-12 11:49+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -2124,10 +2124,8 @@ msgstr "These were merely servants of a far more powerful master."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:530
-#, fuzzy
-#| msgid "One less evil in this forest."
 msgid "One fewer evil in this forest."
-msgstr "One less evil in this forest."
+msgstr "One fewer evil in this forest."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:564
@@ -3829,15 +3827,11 @@ msgstr ""
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:237
-#, fuzzy
-#| msgid ""
-#| "These forts and ill-equipped for holding back so many undead. I am "
-#| "certain we will be slaughtered if we try to fight them here!"
 msgid ""
 "These forts are ill-equipped for holding back so many undead. I am certain "
 "we will be slaughtered if we try to fight them here!"
 msgstr ""
-"These forts and ill-equipped for holding back so many undead. I am certain "
+"These forts are ill-equipped for holding back so many undead. I am certain "
 "we will be slaughtered if we try to fight them here!"
 
 #. [message]: speaker=Deoran
@@ -3905,13 +3899,6 @@ msgstr "Those are brave words that I would not have expected from you, Afalas."
 
 #. [message]: speaker=Urza Afalas
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:269
-#, fuzzy
-#| msgid ""
-#| "All things end one way or another. Alas, I would have liked to see my "
-#| "home in Westin one more time, but I am too tired. Tired of running, and "
-#| "tired of fleeing from these undead, who corrupted and consumed my "
-#| "brothers. You may think us criminals and outlaws, but we are still human "
-#| "and we still know loyalty and gratitude, sir knights."
 msgid ""
 "All things end one way or another. Alas, I would have liked to see my home "
 "in Westin one more time, but I am too tired. Tired of running, and tired of "
@@ -3923,7 +3910,7 @@ msgstr ""
 "in Westin one more time, but I am too tired. Tired of running, and tired of "
 "fleeing from these undead, who corrupted and consumed my brothers. You may "
 "think us criminals and outlaws, but we are still human and we still know "
-"loyalty and gratitude, sir knights."
+"loyalty and gratitude."
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:273
