updated Chinese (Traditional) translation

--- a/po/wesnoth-dm/zh_TW.po
+++ b/po/wesnoth-dm/zh_TW.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Traditional Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # Ximing Hou <u4786176@anu.edu.au>, 2011.
 # 曾筠鈞 <yunchuntseng@gmail.com>, 2018.
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
-"PO-Revision-Date: 2018-08-26 18:58+0800\n"
-"Last-Translator: 曾筠鈞 Grace <yunchuntseng@gmail.com>\n"
+"PO-Revision-Date: 2019-03-11 19:54+0800\n"
+"Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:22
@@ -385,7 +385,7 @@ msgid ""
 "I have many contacts at the court and..."
 msgstr ""
 "迪法多，你作為我的學徒的日子即將結束。你現在是一個訓練有素的法師，你可以選擇"
-"自己的人生道路。我希望，無論如何，你能夠接受我的建議，為加拉德國王效勞。我在"
+"自己的人生道路。我希望，無論如何，你能夠接受我的建議，為嘉拉德國王效勞。我在"
 "王宮裡有很多熟人，而且……"
 
 #. [message]: speaker=Grogor-Tuk
@@ -761,7 +761,7 @@ msgstr ""
 msgid ""
 "Ah, one of Methor’s, eh? Good, good... Well, young Garard certainly needs "
 "all the hands he can muster right now. Especially those who know their magic!"
-msgstr "哦，梅瑟的學生？年輕的加拉德現在正在召集延攬人才，尤其是懂得魔法的人！"
+msgstr "哦，梅瑟的學生？年輕的嘉拉德現在正在召集延攬人才，尤其是懂得魔法的人！"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg:268
@@ -774,13 +774,13 @@ msgid ""
 "That is ill news indeed... these are dark times. I think you had best return "
 "with me to Weldyn. Garard too, must hear your news."
 msgstr ""
-"這無疑是個壞消息...真是個黑暗時期，我想你最好跟我一起回到維丁，加拉德也需要知"
+"這無疑是個壞消息...真是個黑暗時期，我想你最好跟我一起回到維丁，嘉拉德也需要知"
 "道這件事。"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg:279
 msgid "Is that Garard, King of Wesnoth, you refer to?!"
-msgstr "這是不是您提到的那個，韋諾的國王 — 加拉德?!"
+msgstr "這是不是您提到的那個，韋諾的國王，嘉拉德？！"
 
 #. [message]: speaker=Leollyn
 #: data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg:283
@@ -802,7 +802,7 @@ msgstr "維丁議會"
 #. [side]: type=King of Wesnoth, id=Garard
 #: data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg:29
 msgid "Garard"
-msgstr "加拉德"
+msgstr "嘉拉德"
 
 #. [unit]: type=Cavalryman, id=Gurcyn
 #: data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg:65
@@ -935,9 +935,9 @@ msgid ""
 "powerful mages. Allow only your mind to enter the land of the dead — should "
 "your body follow, there is no return! Do you still wish to go?"
 msgstr ""
-"嗯⋯加拉德國王讓你聽從我的命令，如果你願意，我將命令你前往北方，他不會干涉與戰"
-"爭有關的魔法任務的。但是你必須確定你已經為如此艱難的任務做好準備。與冥界打交"
-"道，甚至對於最厲害的法師來說都有困難。只允許你的意識進入冥界…但如果身體也進"
+"嗯...嘉拉德國王讓你聽從我的命令，如果你願意，我將命令你前往北方，他不會干涉與"
+"戰爭有關的魔法任務的。但是你必須確定你已經為如此艱難的任務做好準備。與冥界打"
+"交道，甚至對於最厲害的法師來說都有困難。只允許你的意識進入冥界…但如果身體也進"
 "去，就回不來了！你還想去嗎？"
 
 #. [message]: speaker=Delfador
@@ -1234,7 +1234,7 @@ msgid ""
 "Ur-Thorodor, please let us pass! We are on a vital mission for King Garard, "
 "in the interests of all living things in Wesnoth."
 msgstr ""
-"烏索爾多，請讓我們過去吧！爲了韋諾的眾生，我們正在執行加拉德國王的重要任務。"
+"烏索爾多，請讓我們過去吧！爲了韋諾的眾生，我們正在執行嘉拉德國王的重要任務。"
 
 #. [message]: speaker=Ur-Thorodor
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:108
@@ -1253,7 +1253,7 @@ msgid ""
 "This Ur-Thorodor should not speak of King Garard that way! <i>“Suffer our "
 "wrath”</i> indeed... I’ll show him wrath!"
 msgstr ""
-"這個烏索爾多不應該這樣說加拉德國王！<i>“接受我們的憤怒”</i>，讓我來告訴他何謂"
+"這個烏索爾多不應該這樣說嘉拉德國王！<i>“接受我們的憤怒”</i>，讓我來告訴他何謂"
 "憤怒！"
 
 #. [message]: speaker=Delfador
@@ -1319,7 +1319,7 @@ msgid ""
 "no Wesnothian will set foot on your island without your permission again. As "
 "a token of good faith, I command my army to return to the mainland."
 msgstr ""
-"烏索爾多，聽我的！我們不會占領你們的小島。如果你可以讓我們留在這，我能以加拉"
+"烏索爾多，聽我的！我們不會占領你們的小島。如果你可以讓我們留在這，我能以嘉拉"
 "德國王之名保證，再也不會有韋諾人不經你允許登上這島。作為保證，我命令軍隊返回"
 "陸地。"
 
@@ -2080,7 +2080,7 @@ msgstr "對，我說的就是他。"
 msgid ""
 "If I might ask, where am I? And what of Lionel, and King Garard? What has "
 "befallen them?"
-msgstr "冒昧地問一下，我在那裡？萊昂涅，吉拉德國王呢？他們發生什麽事情了？"
+msgstr "冒昧地問一下，我在那裡？萊昂涅，嘉拉德國王呢？他們發生什麽事情了？"
 
 #. [message]: speaker=Chantal
 #: data/campaigns/Delfadors_Memoirs/scenarios/11_Wasteland.cfg:250
@@ -3145,7 +3145,7 @@ msgstr "但國王的處境依舊不妙..."
 #. [side]: type=King of Wesnoth, id=Garard II
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:47
 msgid "Garard II"
-msgstr "加拉德二世"
+msgstr "嘉拉德二世"
 
 #. [side]: type=Orcish Sovereign, id=Zorlan
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:81
@@ -3170,7 +3170,7 @@ msgstr "特格羅"
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:209
 msgid "Death of Garard II"
-msgstr "加拉德二世被擊敗"
+msgstr "嘉拉德二世陣亡"
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:252
@@ -3388,7 +3388,7 @@ msgstr ""
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:128
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:140
 msgid "King Garard"
-msgstr "國王加拉德"
+msgstr "嘉拉德國王"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:35
@@ -4297,7 +4297,7 @@ msgid ""
 "most valued advisor."
 msgstr ""
 "聯盟的勝利及和平的條款為一個世代的人帶來一段和平的時期。新的國王從雅碧關之役"
-"就開始信任迪法多，也難怪迪法多現在成為加拉德二世最有價值的鑒臣。"
+"就開始信任迪法多，也難怪迪法多現在成為嘉拉德二世最有價值的鑒臣。"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/20_Prince_of_Wesnoth.cfg:26
@@ -4419,7 +4419,7 @@ msgid ""
 "ceased all such talk when I did not respond, and I thought it merely the "
 "momentary whim of a proud and willful woman."
 msgstr ""
-"我想應該沒有。但...艾絲維爾，加拉德的王后，艾瑟德的母親，在好幾個月前就在暗示"
+"我想應該沒有。但...艾絲維爾，嘉拉德的王后，艾瑟德的母親，在好幾個月前就在暗示"
 "我要教她魔法。在我沒有回應後，她也沒有繼續這話題。我以為這只是一個驕傲和任性"
 "女人的突發奇想。"
 
