--- a/po/wesnoth-ei/zh_TW.po
+++ b/po/wesnoth-ei/zh_TW.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
-"PO-Revision-Date: 2019-01-27 15:06+0000\n"
+"PO-Revision-Date: 2019-03-11 19:56+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.12\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:13
@@ -167,7 +167,7 @@ msgid ""
 "River Guard posts had been abandoned, as colonists spread into the Estmarks "
 "and the orcs were driven in retreat north of the Great River."
 msgstr ""
-"在高爾德一世統治時期，為了阻擋東部外圍強盜和半獸人，高爾德一世在索拉達克南邊"
+"在嘉拉德一世統治時期，為了阻擋東部外圍強盜和半獸人，嘉拉德一世在索拉達克南邊"
 "與維丁岸邊建立哨站，以便阻擋強盜和半獸人騎兵。但是後來的幾年河岸邊的據點被遺"
 "棄了，因為殖民者開始移居到艾斯馬可，而半獸人也被驅逐到河的北邊。"
 
