--- a/po/wesnoth-tsg/zh_TW.po
+++ b/po/wesnoth-tsg/zh_TW.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
-"PO-Revision-Date: 2019-02-23 19:27+0800\n"
-"Last-Translator: Li, Kwunron <likwueron>\n"
+"PO-Revision-Date: 2019-03-12 12:19+0800\n"
+"Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:9
@@ -45,7 +45,7 @@ msgstr ""
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:23
 msgid "(Novice level, 9 scenarios.)"
-msgstr "（新手難度，9個章節。）"
+msgstr "（新手等級，9個章節。）"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:25
@@ -3282,7 +3282,7 @@ msgstr ""
 msgid ""
 "We are far away from Weldyn. We’ll surely all be killed long before any "
 "reinforcements arrive."
-msgstr "我們離韋玲太遠了。還沒等到援軍來以前我們一定先會被殺光。"
+msgstr "我們離維丁太遠了。還沒等到援軍來以前我們一定先會被殺光。"
 
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:391
@@ -3683,8 +3683,8 @@ msgid ""
 "King Haldric himself. Dark clouds were brewing throughout the realm, and "
 "every commander would be needed to weather the storm..."
 msgstr ""
-"迪奧蘭先生，韋諾的騎士，奉召回威爾丁參與海德洛克陛下主持的會議。暴風雨席捲了"
-"整個王國，每一個統領都需要面對這次考驗......"
+"迪奧蘭先生，韋諾的騎士，奉召回維丁參與海德洛克陛下主持的會議。暴風雨席捲了整"
+"個王國，每一個統領都需要面對這次考驗......"
 
 #. [part]
 #: data/campaigns/The_South_Guard/utils/sg_story.cfg:130
